myteo/test/analyze/type_check/unary_operation.myte
module Test

fun main() {
  (+(1): int);
  (-(1): int);
  (!true: bool);

  (+true: int);
  (-true: int);
  (!1: bool);
}